--- a/variable.ipynb
+++ b/variable.ipynb
@@ -23,11 +23,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<tf.Variable 'Variable:0' shape=(1, 2) dtype=float32, numpy=array([[1., 2.]], dtype=float32)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = tf.Variable([[1.,2.]], float)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def change_sign(x):\n",
+    "    r = tf.negative(x)\n",
+    "    return r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tf.Tensor([[-1. -2.]], shape=(1, 2), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(change_sign(x))"
    ]
   },
   {
